VPC.json
{
  "Transform":"AWS::LanguageExtensions",
  "Parameters":{
    "KeyNameParameter":{
      "Description":"Amazon EC2 Key Pair",
      "Default":"",
      "AllowedPattern":"(^[A-Za-z0-9]{1,30}$|^$)",
      "Type":"AWS::EC2::KeyPair::KeyName"
    },
    "SupernetID":{
      "Description":"Subnet ID (without CIDR)",
      "AllowedPattern":"(^[0-9.]{7,15}$|^$)",
      "Type":"String"
    },
    "SupernetCIDR":{
      "Type":"String",
      "Default":"24",
      "AllowedValues":["24","22","23","25","26"],
      "Description":"The CIDR for the subnet"
    },
    "SubnetCount":{
      "Type":"String",
      "Default":"2",
      "AllowedValues":["1","2","4","8"],
      "Description":"Enter number of subnets to create."
    },
    "CountAZ":{
      "Type":"String",
      "Default":"2",
      "AllowedValues":["1","2","3","4"],
      "Description":"Enter number of AZs to use."
    },
    "Routing":{
      "Type":"String",
      "Default":"STNO",
      "AllowedValues":["STNO","IGW","NONE"],
      "Description":"What type of routing?"
    },
    "ElasticIP":{
      "Type":"String",
      "Default":"YES",
      "AllowedValues":["YES","NO"],
      "Description":"Do you want an Elastic IP with the netutil if you have an IGW?"
    },
    "SPOT":{
      "Type":"String",
      "Default":"YES",
      "AllowedValues":["YES","NO"],
      "Description":"Create NETUTILs as Spots?"
    },
    "NETUTILA":{
      "Type":"String",
      "Default":"DEFAULT",
      "AllowedValues":["YES","NO","DEFAULT"],
      "Description":"Create NETUTILA?"
    },
    "NETUTILB":{
      "Type":"String",
      "Default":"DEFAULT",
      "AllowedValues":["YES","NO","DEFAULT"],
      "Description":"Create NETUTILB?"
    },
    "NETUTILC":{
      "Type":"String",
      "Default":"DEFAULT",
      "AllowedValues":["YES","NO","DEFAULT"],
      "Description":"Create NETUTILB?"
    },
    "NETUTILD":{
      "Type":"String",
      "Default":"DEFAULT",
      "AllowedValues":["YES","NO","DEFAULT"],
      "Description":"Create NETUTILB?"
    },
    "VPCName":{
      "Description":"VPC Name",
      "Type":"String",
      "AllowedPattern":"^[A-Z1-9-]{3,20}$",
      "ConstraintDescription":"Must be upper case or numbers between 3 and 20 chars"
    },
    "Environment":{
      "Type":"String",
      "Default":"PROD",
      "AllowedValues":["PROD","PREPROD","TEST","DEV","PP","PUBLIC"],
      "Description":"Choose Environment tag."
    }
  },
  "Mappings":{
    "Mapping01":{
      "us-west-1":{
        "ImageId"                         : "ami-0d382e80be7ffdae5",
        "Associatewith"                   : "STNO-NAME",
        "Propagateto"                     : "STNO-NAME"
      },
      "us-east-1":{
        "ImageId"                         : "ami-053b0d53c279acc90",
        "Associatewith"                   : "STNO-NAME",
        "Propagateto"                     : "STNO-NAME"
      },
      "us-west-2":{
        "ImageId"                         : "ami-036d46416a34a611c",
        "Associatewith"                   : "STNO-NAME",
        "Propagateto"                     : "STNO-NAME"
      },
      "Common":{
        "UserData":"IyEvYmluL2Jhc2gNCnN1ZG8gc2VkIC1FICdzXy8vKC4qKS11cGRhdGVzIjtfXDEtdXBkYXRlcyI7XycgL2V0Yy9hcHQvYXB0LmNvbmYuZC81MHVuYXR0ZW5kZWQtdXBncmFkZXMgLWkNCnN1ZG8gc2VkICdzXy8vVW5hdHRlbmRlZC1VcGdyYWRlOjpBdXRvRml4SW50ZXJydXB0ZWREcGtnICJ0cnVlIjtfVW5hdHRlbmRlZC1VcGdyYWRlOjpBdXRvRml4SW50ZXJydXB0ZWREcGtnICJ0cnVlIjtfJyAvZXRjL2FwdC9hcHQuY29uZi5kLzUwdW5hdHRlbmRlZC11cGdyYWRlcyAtaQ0Kc3VkbyBzZWQgJ3NfLy9VbmF0dGVuZGVkLVVwZ3JhZGU6OlJlbW92ZS1VbnVzZWQtS2VybmVsLVBhY2thZ2VzICJ0cnVlIjtfVW5hdHRlbmRlZC1VcGdyYWRl [...]
        "InstanceType":"t3a.nano"
      },
      "Subnet1":{
        "Description":"1st subnet",
        "1az":0,
        "2az":0,
        "3az":0,
        "4az":0,
        "1azNameIGW":"Public",

        "1azNameSTNO":"Private",
        "1azNameNONE":"Private",

        "2azNameIGW":"PublicA",
        "3azNameIGW":"PublicA",
        "4azNameIGW":"PublicA",

        "2azNameSTNO":"PrivateA",
        "3azNameSTNO":"PrivateA",
        "4azNameSTNO":"PrivateA",
        "2azNameNONE":"PrivateA",
        "3azNameNONE":"PrivateA",
        "4azNameNONE":"PrivateA"
      },
      "Subnet2":{
        "Description":"2nd subnet",
        "1az":0,
        "2az":1,
        "3az":1,
        "4az":1,
        "1azNameIGW":"Private",

        "2azNameIGW":"PublicB",
        "3azNameIGW":"PublicB",
        "4azNameIGW":"PublicB",

        "2azNameSTNO":"PrivateB",
        "3azNameSTNO":"PrivateB",
        "4azNameSTNO":"PrivateB",
        "2azNameNONE":"PrivateB",
        "3azNameNONE":"PrivateB",
        "4azNameNONE":"PrivateB",

        "1azNameSTNO":"Private2",
        "1azNameNONE":"Private2"
      },
      "Subnet3":{
        "Description":"3rd subnet, makes sence with 3 or 4 AZs, or two with IGW",
        "1az":0,
        "2az":0,
        "3az":2,
        "4az":2,
        "3azNameIGW":"PublicC",
        "4azNameIGW":"PublicC",

        "2azNameIGW":"PrivateA",

        "3azNameSTNO":"PrivateC",
        "4azNameSTNO":"PrivateC",
        "3azNameNONE":"PrivateC",
        "4azNameNONE":"PrivateC",

        "2azNameSTNO":"Private2A",
        "2azNameNONE":"Private2A",

        "1azNameIGW":"Private2",

        "1azNameSTNO":"Private3",
        "1azNameNONE":"Private3"
      },
      "Subnet4":{
        "Description":"4th subnet, doesnt make when 3 AZs, makes sence with 4 AZs or 2 with IGW",
        "1az":0,
        "2az":1,
        "3az":3,
        "4az":3,
        "4azNameIGW":"PublicD",

        "2azNameIGW":"PrivateB",

        "4azNameSTNO":"PrivateD",
        "4azNameNONE":"PrivateD",


        "2azNameSTNO":"Private2B",
        "2azNameNONE":"Private2B",

        "1azNameIGW":"Private3",

        "3azNameIGW" :"NonSence",
        "3azNameSTNO":"NonSence",
        "3azNameNONE":"NonSence",
        "1azNameSTNO":"Private4",
        "1azNameNONE":"Private4"
      },
      "Subnet5":{
        "Description":"5th subnet, only makes sence with 3 or 4 AZs and IGW",
        "1az":0,
        "2az":0,
        "3az":0,
        "4az":0,
        "4azNameIGW":"PrivateA",
        "3azNameIGW":"PrivateA",

        "2azNameIGW":"Private2A",

        "2azNameSTNO":"Private3A",
        "2azNameNONE":"Private3A",

        "3azNameSTNO":"Private2A",
        "3azNameNONE":"Private2A",
        "4azNameSTNO":"Private2A",
        "4azNameNONE":"Private2A",

        "1azNameIGW":"Private4",

        "1azNameNONE":"Private5",
        "1azNameSTNO":"Private5"
      },
      "Subnet6":{
        "Description":"6th subnet, only makes sence with 3 or 4 AZs and IGW",
        "1az":0,
        "2az":1,
        "3az":1,
        "4az":1,
        "3azNameIGW":"PrivateB",
        "4azNameIGW":"PrivateB",

        "2azNameIGW":"Private2B",

        "2azNameSTNO":"Private3B",
        "2azNameNONE":"Private3B",
        
        "3azNameSTNO":"Private2B",
        "3azNameNONE":"Private2B",
        "4azNameSTNO":"Private2B",
        "4azNameNONE":"Private2B",

        "1azNameIGW":"Private5",
        
        "1azNameSTNO":"Private6",
        "1azNameNONE":"Private6"
      },
      "Subnet7":{
        "Description":"7th subnet, only makes sence with 3 or 4 AZs and IGW",
        "1az":0,
        "2az":0,
        "3az":2,
        "4az":2,
        "3azNameIGW":"PrivateC",
        "4azNameIGW":"PrivateC",

        "2azNameIGW":"Private3A",

        "2azNameSTNO":"Private4A",
        "2azNameNONE":"Private4A",

        "3azNameSTNO":"Private2C",
        "3azNameNONE":"Private2C",
        "4azNameSTNO":"Private2C",
        "4azNameNONE":"Private2C",

        "1azNameIGW":"Private6",

        "1azNameSTNO":"Private7",
        "1azNameNONE":"Private7"
      },
      "Subnet8":{
        "Description":"8th subnet, doesn't make with 3 az, only makes sence with 4 AZs and IGW",
        "1az":0,
        "2az":1,
        "3az":3,
        "4az":3,
        "4azNameIGW":"PrivateD",

        "2azNameIGW":"Private3B",

        "2azNameSTNO":"Private4B",
        "2azNameNONE":"Private4B",

        "4azNameSTNO":"Private2D",
        "4azNameNONE":"Private2D",

        "1azNameIGW":"Private7",

        "3azNameIGW" :"NonSence",
        "3azNameSTNO":"NonSence",
        "3azNameNONE":"NonSence",
        "1azNameSTNO":"Private8",
        "1azNameNONE":"Private8"
      }
    },
    "CIDRMAP":{
      "26":{
        "1"         : "6",
        "2"         : "5",
        "4"         : "4",
        "8"         : "3"
      },
      "25":{
        "1"         : "7",
        "2"         : "6",
        "4"         : "5",
        "8"         : "4"
      },
      "24":{
        "1"         : "8",
        "2"         : "7",
        "4"         : "6",
        "8"         : "5"
      },
      "23":{
        "1"         : "9",
        "2"         : "8",
        "4"         : "7",
        "8"         : "6"
      },
      "22":{
        "1"         : "10",
        "2"         : "9",
        "4"         : "8",
        "8"         : "7"
      }
    }
  },
  "Conditions":{
    "BuildSpot":{
      "Fn::Equals":[{"Ref":"SPOT"},"YES"]
    },
    "BuildNETUTILA":{
      "Fn::Or":[
        {"Fn::Equals":[{"Ref":"NETUTILA"},"YES"]},
        {"Fn::Equals":[{"Ref":"NETUTILA"},"DEFAULT"]}
      ]      
    },
    "BuildNETUTILAeip":{
      "Fn::And":[
        {"Condition":"BuildNETUTILA"},
        {"Fn::Equals":[{"Ref":"ElasticIP"},"YES"]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "BuildNETUTILB":{
      "Fn::And":[
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"NETUTILB"},"YES"]},
          {"Fn::And":[
            {"Fn::Equals":[{"Ref":"NETUTILB"},"DEFAULT"]},
            {"Fn::Or":[
              {"Fn::Equals":[{"Ref":"CountAZ"},"2"]},
              {"Fn::Equals":[{"Ref":"CountAZ"},"3"]},
              {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
            ]}
          ]}
        ]},
        {"Condition":"Build2"}
      ]
    },
    "BuildNETUTILBeip":{
      "Fn::And":[
        {"Condition":"BuildNETUTILB"},
        {"Fn::Equals":[{"Ref":"ElasticIP"},"YES"]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "BuildNETUTILC":{
      "Fn::And":[
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"NETUTILC"},"YES"]},
          {"Fn::And":[
            {"Fn::Equals":[{"Ref":"NETUTILC"},"DEFAULT"]},
            {"Fn::Or":[
              {"Fn::Equals":[{"Ref":"CountAZ"},"3"]},
              {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
            ]}
          ]}
        ]},
        {"Condition":"Build3"}
      ]
    },
    "BuildNETUTILCeip":{
      "Fn::And":[
        {"Condition":"BuildNETUTILC"},
        {"Fn::Equals":[{"Ref":"ElasticIP"},"YES"]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "BuildNETUTILD":{
      "Fn::And":[
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"NETUTILD"},"YES"]},
          {"Fn::And":[
            {"Fn::Equals":[{"Ref":"NETUTILD"},"DEFAULT"]},
            {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
          ]}
        ]},
        {"Condition":"Build4"}
      ]
    },
    "BuildNETUTILDeip":{
      "Fn::And":[
        {"Condition":"BuildNETUTILD"},
        {"Fn::Equals":[{"Ref":"ElasticIP"},"YES"]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "Build2":{
      "Fn::Or":[
        {"Fn::Equals":[{"Ref":"SubnetCount"},"2"]},
        {"Fn::Equals":[{"Ref":"SubnetCount"},"4"]},
        {"Fn::Equals":[{"Ref":"SubnetCount"},"8"]}
      ]
    },
    "Build3":{
      "Fn::Or":[
        {"Fn::Equals":[{"Ref":"SubnetCount"},"4"]},
        {"Fn::Equals":[{"Ref":"SubnetCount"},"8"]}
      ]
    },
    "Build4":{
      "Fn::And":[
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"SubnetCount"},"4"]},
          {"Fn::Equals":[{"Ref":"SubnetCount"},"8"]}
        ]},
        {"Fn::Not":[{"Fn::Equals":[{"Ref":"CountAZ"},"3"]}]}
      ]
    },
    "Build7":{
      "Fn::Equals":[{"Ref":"SubnetCount"},"8"]
    },
    "Build8":{
      "Fn::And":[
        {"Fn::Equals":[{"Ref":"SubnetCount"},"8"]},
        {"Fn::Not":[{"Fn::Equals":[{"Ref":"CountAZ"},"3"]}]}
      ]
    },
    "TagSTNO":{
      "Fn::Equals":[{"Ref":"Routing"},"STNO"]
    },
    "TagSTNO2":{
      "Fn::And":[
        {"Fn::Equals":[{"Ref":"Routing"},"STNO"]},
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"CountAZ"},"2"]},
          {"Fn::Equals":[{"Ref":"CountAZ"},"3"]},
          {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
        ]}
      ]
    },
    "TagSTNO3":{
      "Fn::And":[
        {"Fn::Equals":[{"Ref":"Routing"},"STNO"]},
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"CountAZ"},"3"]},
          {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
        ]}
      ]
    },
    "TagSTNO4":{
      "Fn::And":[
        {"Fn::Equals":[{"Ref":"Routing"},"STNO"]},
        {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
      ]
    },
    "MakeIGW":{
      "Fn::Equals":[{"Ref":"Routing"},"IGW"]
    },
    "MakeIGW2":{
      "Fn::And":[
        {"Condition":"Build2"},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "MakeIGW3":{
      "Fn::And":[
        {"Condition":"Build3"},
        {"Fn::Or":[
          {"Fn::Equals":[{"Ref":"CountAZ"},"3"]},
          {"Fn::Equals":[{"Ref":"CountAZ"},"4"]}
        ]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "MakeIGW4":{
      "Fn::And":[
        {"Condition":"Build4"},
        {"Fn::Equals":[{"Ref":"CountAZ"},"4"]},
        {"Fn::Equals":[{"Ref":"Routing"},"IGW"]}
      ]
    },
    "NotMakeIGW":{
      "Fn::Not":[{"Condition":"MakeIGW"}]
    },
    "MakeSubnet2RT":{
      "Fn::And":[
        {"Condition":"Build2"},
        {"Fn::Not":[{"Condition":"MakeIGW2"}]}
      ]
    },
    "MakeSubnet3RT":{
      "Fn::And":[
        {"Condition":"Build3"},
        {"Fn::Not":[{"Condition":"MakeIGW3"}]}
      ]
    },
    "MakeSubnet4RT":{
      "Fn::And":[
        {"Condition":"Build4"},
        {"Fn::Not":[{"Condition":"MakeIGW4"}]}
      ]
    }
  },
  "Resources":{
    "VPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},
        "Tags":[
          {"Key":"Name"           ,"Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"}]]}},
          {"Fn::If":["TagSTNO",
            {"Key":"Associate-with" ,"Value":{"Fn::FindInMap":["Mapping01",{"Ref":"AWS::Region"},"Associatewith"]}},
            {"Ref":"AWS::NoValue"}
          ]},
          {"Fn::If":["TagSTNO",
            {"Key":"Propagate-to"   ,"Value":{"Fn::FindInMap":["Mapping01",{"Ref":"AWS::Region"},"Propagateto"]}},
            {"Ref":"AWS::NoValue"}
          ]}
        ]
      }
    },
    "Subnet1":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[0,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet1",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet1",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}},
          {"Fn::If":["TagSTNO",
            {"Key":"Attach-to-tgw","Value":""},
            {"Ref":"AWS::NoValue"}
          ]}
        ]
      }
    },
    "Subnet2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build2",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[1,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet2",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet2",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}},
          {"Fn::If":["TagSTNO2",
            {"Key":"Attach-to-tgw","Value":""},
            {"Ref":"AWS::NoValue"}
          ]}
        ]
      }
    },
    "Subnet3":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build3",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet3",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet3",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}},
          {"Fn::If":["TagSTNO3",
            {"Key":"Attach-to-tgw","Value":""},
            {"Ref":"AWS::NoValue"}
          ]}
        ]  
      }
    },
    "Subnet4":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build4",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[3,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet4",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet4",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}},
          {"Fn::If":["TagSTNO4",
            {"Key":"Attach-to-tgw","Value":""},
            {"Ref":"AWS::NoValue"}
          ]}
        ]  
      }
    },
    "Subnet5":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build7",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[4,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet5",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet5",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}}
        ]  
      }
    },
    "Subnet6":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build7",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[5,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet6",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet6",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}}
        ]  
      }
    },
    "Subnet7":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build7",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[6,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet7",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet7",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}}
        ]  
      }
    },
    "Subnet8":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"Build8",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "CidrBlock":{"Fn::Select":[7,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},
        "AvailabilityZone":{"Fn::Select":[{"Fn::FindInMap":["Mapping01","Subnet8",{"Fn::Join":["",[{"Ref":"CountAZ"},"az"]]}]},{"Fn::GetAZs":{"Ref":"AWS::Region"}}]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},{"Fn::FindInMap":["Mapping01","Subnet8",{"Fn::Join":["",[{"Ref":"CountAZ"},"azName",{"Ref":"Routing"}]]}]}]]}}
        ]  
      }
    },
    "PrivateRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "Tags":[{"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"VPCName"},"-",{"Ref":"Environment"},"-RT"]]}}]
      }
    },
    "Subnet1RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"NotMakeIGW",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet1"}
      }
    },
    "Subnet2RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeSubnet2RT",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet2"}
      }
    },
    "Subnet3RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeSubnet3RT",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet3"}
      }
    },
    "Subnet4RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeSubnet4RT",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet4"}
      }
    },
    "Subnet5RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"Build8",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet5"}
      }
    },
    "Subnet6RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"Build8",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet6"}
      }
    },
    "Subnet7RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"Build8",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet7"}
      }
    },
    "Subnet8RT":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"Build8",
      "Properties":{
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "SubnetId":{"Ref":"Subnet8"}
      }
    },
    "launchTemplate":{
      "Type":"AWS::EC2::LaunchTemplate",
      "Properties":{
        "LaunchTemplateData":{
          "InstanceMarketOptions":{"Fn::If":["BuildSpot",{"MarketType":"spot","SpotOptions":{"InstanceInterruptionBehavior":"stop","SpotInstanceType":"persistent"}},{"Ref":"AWS::NoValue"}]},
          "ImageId"              : {"Fn::FindInMap":["Mapping01",{"Ref":"AWS::Region"},"ImageId"]},
          "InstanceType"         : {"Fn::FindInMap":["Mapping01","Common","InstanceType"]},
          "SecurityGroupIds"     :[{"Ref":"NETWORKUTILSECG"}],
          "KeyName"              : {"Ref":"KeyNameParameter"},
          "UserData"             : {"Fn::FindInMap":["Mapping01","Common","UserData"]},
          "BlockDeviceMappings"  :[{
            "DeviceName":"/dev/sda1",
            "Ebs":{
              "VolumeType"          : "gp3",
              "DeleteOnTermination":"true",
              "VolumeSize"          : 20
            }
          }],
          "TagSpecifications":[{"ResourceType":"instance","Tags":[
            {"Key":"LOB Owner"            ,"Value":"NETWORK ENGINEERING GROUP"},
            {"Key":"Application"          ,"Value":"NPM"},
            {"Key":"ApplicationTier"      ,"Value":"App"},
            {"Key":"EnvironmentTier"      ,"Value":"NONPROD"},
            {"Key":"BACKUPTYPE"           ,"Value":"NONPROD-0000"},
            {"Key":"Branch\\Agency Owner" ,"Value":"ENTERPRISE"},
            {"Key":"Operating Systems"    ,"Value":"Linux"}
          ]}]
        }
      }
    },
    "InstNETUTILA":{
      "Type":"AWS::EC2::Instance",
      "Condition":"BuildNETUTILA",
      "Properties":{
        "LaunchTemplate"      : {"LaunchTemplateId":{"Ref":"launchTemplate"},"Version":1},
        "PrivateIpAddress"    : {"Fn::Select":[0,{"Fn::Split":["/",{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Select":[0,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},5,1]}]}]}]},
        "SubnetId"            : {"Ref":"Subnet1"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUA"]]} }
        ]
      }
    },
    "InstNETUTILB":{
      "Type":"AWS::EC2::Instance",
      "Condition":"BuildNETUTILB",
      "Properties":{
        "LaunchTemplate"      : {"LaunchTemplateId":{"Ref":"launchTemplate"},"Version":1},
        "PrivateIpAddress"    : {"Fn::Select":[0,{"Fn::Split":["/",{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Select":[1,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},5,1]}]}]}]},
        "SubnetId"            : {"Ref":"Subnet2"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUB"]]} }
        ]
      }
    },
    "InstNETUTILC":{
      "Type":"AWS::EC2::Instance",
      "Condition":"BuildNETUTILC",
      "Properties":{
        "LaunchTemplate"      : {"LaunchTemplateId":{"Ref":"launchTemplate"},"Version":1},
        "PrivateIpAddress"    : {"Fn::Select":[0,{"Fn::Split":["/",{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},5,1]}]}]}]},
        "SubnetId"            : {"Ref":"Subnet3"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUC"]]} }
        ]
      }
    },
    "InstNETUTILD":{
      "Type":"AWS::EC2::Instance",
      "Condition":"BuildNETUTILD",
      "Properties":{
        "LaunchTemplate"      : {"LaunchTemplateId":{"Ref":"launchTemplate"},"Version":1},
        "PrivateIpAddress"    : {"Fn::Select":[0,{"Fn::Split":["/",{"Fn::Select":[2,{"Fn::Cidr":[{"Fn::Select":[3,{"Fn::Cidr":[{"Fn::Join":["/",[{"Ref":"SupernetID"},{"Ref":"SupernetCIDR"}]]},{"Ref":"SubnetCount"},{"Fn::FindInMap":["CIDRMAP",{"Ref":"SupernetCIDR"},{"Ref":"SubnetCount"}]}]}]},5,1]}]}]}]},
        "SubnetId"            : {"Ref":"Subnet4"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUD"]]} }
        ]
      }
    },
    "NETUTILAEIP":{
      "Type":"AWS::EC2::EIP",
      "Condition":"BuildNETUTILAeip",
      "Properties":{
        "InstanceId":{"Ref":"InstNETUTILA"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUA-EIP"]]} }
        ]
      }
    },
    "NETUTILBEIP":{
      "Type":"AWS::EC2::EIP",
      "Condition":"BuildNETUTILBeip",
      "Properties":{
        "InstanceId":{"Ref":"InstNETUTILB"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUB-EIP"]]} }
        ]
      }
    },
    "NETUTILCEIP":{
      "Type":"AWS::EC2::EIP",
      "Condition":"BuildNETUTILCeip",
      "Properties":{
        "InstanceId":{"Ref":"InstNETUTILC"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUC-EIP"]]} }
        ]
      }
    },
    "NETUTILDEIP":{
      "Type":"AWS::EC2::EIP",
      "Condition":"BuildNETUTILDeip",
      "Properties":{
        "InstanceId":{"Ref":"InstNETUTILD"},
        "Tags":[
          {"Key":"Name"                 ,"Value":{"Fn::Join":["",[{"Ref":"VPCName"},{"Ref":"Environment"},"NUD-EIP"]]} }
        ]
      }
    },
    "NETWORKUTILSECG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":{"Fn::Join":[".",[{"Ref":"VPCName"},{"Ref":"Environment"},"NETWORKUTIL.SECG"]]},
        "VpcId":{"Ref":"VPC"},
        "SecurityGroupIngress":[
          {"IpProtocol":"icmp","FromPort": 8,   "ToPort": -1,  "CidrIp":"0.0.0.0/0",      "Description":"Allow ping"              },
          {"IpProtocol":"tcp",  "FromPort": 22,  "ToPort": 22,  "CidrIp":"0.0.0.0/0",      "Description":"Allow SSH"               },
          {"IpProtocol":"tcp",  "FromPort": 5200,"ToPort": 5210,"CidrIp":"10.0.0.0/8",     "Description":"Allow iperf RFC1918-10"  },
          {"IpProtocol":"tcp",  "FromPort": 5200,"ToPort": 5210,"CidrIp":"172.16.0.0/12",  "Description":"Allow iperf RFC1918-172"},
          {"IpProtocol":"tcp",  "FromPort": 5200,"ToPort": 5210,"CidrIp":"192.168.0.0/16","Description":"Allow iperf RFC1918-192"}
        ],
        "Tags":[{"Key":"Name","Value":{"Fn::Join":[".",[{"Ref":"VPCName"},{"Ref":"Environment"},"NETWORKUTIL.SECG"]]}}]
      }
    },
    "FLOWLOGGROUP":{
      "Type":"AWS::Logs::LogGroup",
      "Properties":{
          "RetentionInDays": 14
      }
    },
    "FlowLogRole":{
      "Type":"AWS::IAM::Role",
      "Properties":{
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Effect":"Allow",
              "Principal":{"Service":"vpc-flow-logs.amazonaws.com"},
              "Action":"sts:AssumeRole"
            }
          ]
        },
        "Policies":[
          {
            "PolicyName":"flowlogs-policy",
            "PolicyDocument":{
              "Version":"2012-10-17",
              "Statement":[
                {
                  "Effect":"Allow",
                  "Action":[
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:DescribeLogGroups",
                    "logs:DescribeLogStreams"
                  ],
                  "Resource":{"Fn::GetAtt":["FLOWLOGGROUP","Arn"]}
                }
              ]
            }
          }
        ]
      }
    },
    "FLOWLOG":{
      "Type":"AWS::EC2::FlowLog",
      "Properties":{
        "DeliverLogsPermissionArn":{"Fn::GetAtt":["FlowLogRole","Arn"]},
        "LogGroupName":{"Ref":"FLOWLOGGROUP"},
        "ResourceId":{"Ref":"VPC"},
        "ResourceType":"VPC",
        "MaxAggregationInterval" : 60,
        "TrafficType":"ALL"
      }
    },
    "IGW":{
      "Condition":"MakeIGW",
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[{"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},"IGW"]]}}]
      }
    },
    "RouteTableIGW":{
      "Condition":"MakeIGW",
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "Tags":[{"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"VPCName"},{"Ref":"Environment"},"IGW","RT"]]}}]
      }
    },
    "AttachIGW":{
      "Condition":"MakeIGW",
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "InternetGatewayId":{"Ref":"IGW"}
      }
    },
    "RouteIGW":{
      "Condition":"MakeIGW",
      "Type":"AWS::EC2::Route",
      "DependsOn":"AttachIGW",
      "Properties":{
        "RouteTableId":{"Ref":"RouteTableIGW"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"IGW"}
      }
    },
    "Subnet1RTIGW":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeIGW",
      "Properties":{
        "RouteTableId":{"Ref":"RouteTableIGW"},
        "SubnetId":{"Ref":"Subnet1"}
      }
    },
    "Subnet2RTIGW":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeIGW2",
      "Properties":{
        "RouteTableId":{"Ref":"RouteTableIGW"},
        "SubnetId":{"Ref":"Subnet2"}
      }
    },
    "Subnet3RTIGW":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeIGW3",
      "Properties":{
        "RouteTableId":{"Ref":"RouteTableIGW"},
        "SubnetId":{"Ref":"Subnet3"}
      }
    },
    "Subnet4RTIGW":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"MakeIGW4",
      "Properties":{
        "RouteTableId":{"Ref":"RouteTableIGW"},
        "SubnetId":{"Ref":"Subnet4"}
      }
    }
  }
}
